# Multi-Agent-Intelligence

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_QUALITY_ANALYSIS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  DOCKER_QUICKSTART.md  DOCKER_SETUP_SUMMARY.md  DOCUMENTATION_INDEX.md  GEMINI_REVIEW.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TIMELINE.md  MICROSOFT_COMPLIANCE.md  Makefile  NEXT_STEPS_PLAN.md  ORCHESTRATION_FIXES.md  ORCHESTRATION_INTEGRATION_ANALYSIS.md  PHASE_6_COMPLETE.md  PHASE_6_QUICKSTART.md  PHASE_6_STATUS.md  PHASE_7_PLAN.md  PRIORITY_2_ENHANCEMENTS_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PR_TEMPLATE.md  QUICKSTART.md  README.docker.md  README.md  README_USER_API.md  REMAINING_TEST_ISSUES.md  SESSION_PROGRESS.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  TESTING.md  TEST_RESULTS.md  UI_GUIDE.md  USAGE_GUIDE.md  WEB_SEARCH_TESTING_GUIDE.md  (+56 more)
backend/: .dockerignore  Dockerfile  ENTITY_MERGE_NOTES.md  pyproject.toml
backend/.pytest_tmp/9e81acee-d9c8-46f1-9872-4a846fff6ec1/: x.db-journal
backend/.pytest_tmp/bdfe6ab3-8027-4e9c-ba65-e9449c85a508/: tool_runs.db-journal
backend/.pytest_tmp/f52d24b6-2428-45f6-8902-ac0b75b99a4f/: tool_runs.db-journal
backend/configs/agents/brainstorming/: moderator.yaml  opponent.yaml  proponent.yaml
backend/configs/agents/core/: coder.yaml  debugger.yaml  documenter.yaml  planner.yaml  reviewer.yaml  tester.yaml
backend/configs/agents/social/: comedian.yaml  empath.yaml  philosopher.yaml  storyteller.yaml
backend/configs/domains/: brainstorming.yaml  social_chat.yaml  social_simulation.yaml  software_development.yaml
backend/configs/skills/python-engineering/: SKILL.md
backend/configs/skills/the_narrative_architect/: SKILL.md
backend/configs/tools/: echo.yaml  file_operations.yaml
backend/docs/: E2E_TESTING.md  MULTI_WORKFLOW_IMPLEMENTATION.md  MULTI_WORKFLOW_QUICKSTART.md  workflow_strategies.md
backend/scripts/: check_llm.py  test_workflows.py  validate_agents.py
backend/src/application/use_cases/: knowledge.py  merge_thread.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  agent.py  conversation.py  domain_config.py  handoff.py  knowledge.py  message.py  registered_agent.py  schemas.py  skill.py  tool.py  tool_run.py  workflow_log.py
backend/src/domain/repositories/: __init__.py  agent_repository.py  conversation_repository.py  (+7 more)
backend/src/presentation/: metrics.py
backend/tests/: conftest.py  integration_test_workflows.py  test_agents_response.py  test_fewshot_router.py  test_hybrid_summary.py  test_orchestrator_validation.py  test_workflow_integration.py
backend/tests/unit/: test_social_strategy.py
(+6002 files in other folders)
